find_library(CBLAS_LIBRARY NAMES satlas HINTS $ENV{CBLASDIR}/lib $ENV{CBLASDIR}/lib64)
set(CBLAS_LIBRARIES ${CBLAS_LIBRARY})

ADD_EXECUTABLE(test1 test1.c)
SET_TARGET_PROPERTIES(test1 PROPERTIES LINK_FLAGS ${CBLAS_LIBRARIES})
TARGET_LINK_LIBRARIES(test1 myblas)
ADD_TEST(Test1 test1)

ADD_EXECUTABLE(test2 test2.c)
SET_TARGET_PROPERTIES(test2 PROPERTIES LINK_FLAGS  ${CBLAS_LIBRARIES})
TARGET_LINK_LIBRARIES(test2 myblas)
ADD_TEST(Test2 test2)

ADD_EXECUTABLE(test3 test3.c)
SET_TARGET_PROPERTIES(test3 PROPERTIES LINK_FLAGS ${CBLAS_LIBRARIES})
TARGET_LINK_LIBRARIES(test3 myblas)
ADD_TEST(Test3 test3)
